# tg-file-bot

./: .env.example  PRODUCTION_HARDENING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_pydantic.py
.sisyphus/: boulder.json
.sisyphus/drafts/: download-quota-config.md  feature-suggestions.md  quota-migration.md  quota-repo-refactor.md  quota-reset-mechanism.md  user-quota-download-tracker.md
.sisyphus/evidence/: task-1-model-serialization.txt  task-1-properties.txt  task-2-config-load.txt  task-2-env-vars.txt  task-3-reset-mechanism.txt  task-3-reset-time.txt
.sisyphus/evidence/final-qa/: 01-model-serialization.md  02-configuration.md  03-quota-logic.md  04-daily-reset.md  05-edge-cases.md  SUMMARY.md  f1-plan-compliance.txt  f2-code-quality.txt  f3-manual-qa.txt  f4-scope-fidelity.txt
.sisyphus/notepads/storage-to-download-quota/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: quota-reset-mechanism.md  storage-to-download-quota.md
bot/: config.py  main.py
bot/database/: redis_connection.py
bot/database/repositories/: quota_repo.py
bot/handlers/: admin.py  common.py  download.py
bot/utils/: file_utils.py  states.py
tests/: conftest.py
tests/database/: test_file_repo.py  test_quota_repo.py
tests/handlers/: test_upload.py
tests/models/: test_file_record.py
tests/utils/: test_file_utils.py  test_keyboards.py
