[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tg-file-storage-bot"
version = "2.0.0"
description = "Telegram File Storage Bot with MongoDB metadata"
requires-python = ">=3.9"
dependencies = [
    "aiogram==3.7.0",
    "motor==3.4.0",
    "pymongo==4.6.0",
    "python-dotenv==1.0.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "pydantic-core==2.18.4",
    "Shortzy==1.4.0",
    "aiohttp==3.9.3",
    "redis[hiredis]==5.0.1",
    "sentry-sdk==1.40.6",

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "black==24.1.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "isort==5.13.2",
    "ipython==8.21.0",
    "ipdb==0.13.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=bot --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["bot"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
[tool.setuptools.packages.find]
# Tells setuptools that 'bot' (and sub-packages) live at the project root
where = ["."]
include = ["bot*"]

[tool.setuptools]
# Explicit root so `pip install -e .` works correctly
package-dir = {"" = "."}
